      deprecated until 0.5.  The "upgrading" behavior of String to Text 
      when no length is present is also deprecated until 0.5; will issue a
      warning when used for CREATE TABLE statements (String with no length
      for SQL expression purposes is still fine) [ticket:912]

- orm
    - Fixed cascades on a += assignment to a list-based relation.

- ext
    - '+', '*', '+=' and '*=' support for association proxied lists.

0.4.2a
------

- orm
    - fixed fairly critical bug whereby the same instance could be listed
      more than once in the unitofwork.new collection; most typically
      reproduced when using a combination of inheriting mappers and 
      ScopedSession.mapper, as the multiple __init__ calls per instance
      could save() the object with distinct _state objects

    - added very rudimentary yielding iterator behavior to Query.  Call
      query.yield_per(<number of rows>) and evaluate the Query in an 
      iterative context; every collection of N rows will be packaged up
      and yielded.  Use this method with extreme caution since it does
      not attempt to reconcile eagerly loaded collections across
      result batch boundaries, nor will it behave nicely if the same
      instance occurs in more than one batch.  This means that an eagerly
      loaded collection will get cleared out if it's referenced in more than
      one batch, and in all cases attributes will be overwritten on instances
      that occur in more than one batch.

   - Fixed in-place set mutation operators for set collections and association
     proxied sets. [ticket:920]

- dialects
    - Fixed the missing call to subtype result processor for the PGArray
      type. [ticket:913]

0.4.2
-----
- sql
    - generic functions ! we introduce a database of known SQL functions, such
      as current_timestamp, coalesce, and create explicit function objects
      representing them. These objects have constrained argument lists, are